# spdk-rs

./: Cargo.toml  build.rs  wrapper.h
.github/workflows/: pr-code-lint.yaml
build_helpers/: library_config.rs  tool.rs
build_scripts/: build_spdk.sh
examples/: hello_world.rs
nix/: sources.json
nix/lib/: rust.nix
nix/pkgs/libspdk/: default.nix
nix/pkgs/nvme-cli/: default.nix
nix/shell/: ci.nix  default.nix  rust.nix  spdk.nix
scripts/: rust-linter-env.sh  rust-style.sh
src/: bdev.rs  bdev_async.rs  bdev_builder.rs  bdev_desc.rs  bdev_io.rs  bdev_iter.rs  bdev_module.rs  bdev_ops.rs  cpu_cores.rs  dma.rs  error.rs  ffihelper.rs  io_channel.rs  io_device_traverse.rs  io_devices.rs  io_type.rs  io_vec.rs  json_write_context.rs  lib.rs  nvme.rs  nvmf.rs  poller.rs  thread.rs  untyped_bdev.rs  uuid.rs
src/bdevs/: bdev_nvme.rs
