[package]
name = "spdk-rs"
description = "Rust bindings for SPDK library"
version = "0.2.0"
edition = "2018"
build = "build.rs"
license = "Apache2"

[build-dependencies]
bindgen = "0.70.1"
cc = "1.1.31"
pkg-config = "0.3.31"

[dependencies]
async-trait = "0.1.83"
futures = "0.3.31"
nix = "0.29.0"
parking_lot = "0.12.3"
serde_json = "1.0.132"
snafu = "0.8.5"
tracing = "0.1.40"

[dependencies.serde]
features = ["derive"]
version = "1.0.214"

[dependencies.uuid]
features = ["v4"]
version = "1.11"
